syntax="proto3";
option java_multiple_files = true;
package  com.example.iot.gRPC.api;

message RegRequest{
  string secret=1;
}

message RegResponse{
  int64 id=1;
}

message AuthRequest{
  int64 id=1;
  string secret=2;
}

message AuthResponse{
  bool authorized=1;
  int32 maxTemp=2;
  int32 minTemp=3;
}

service AuthService{
  rpc registrate(RegRequest) returns (RegResponse);
  rpc login(AuthRequest) returns (AuthResponse);
}